JavaFX Conversion - Leaderboard + Messages WIP
Leaderboard and Messaging system now has basic functionality
Still requires styling, formatting and input validation

Seriously, it looks horrible and will not like it if you dont do things perfectly, but it works...sort of

--- a/FrontEnd/UI_MainStyle.css
+++ b/FrontEnd/UI_MainStyle.css
@@ -34,6 +34,13 @@
 	-fx-alignment: center;
 }
 
+#unreadMsgLabel{
+	-fx-font-size: 12pt;
+	-fx-font-weight: bold;
+	-fx-text-fill: white;
+	-fx-alignment: center;
+}
+
 #portfolioHeader{
 	-fx-font-family: fantasy;
 	-fx-font-size: 20pt;
@@ -50,6 +57,22 @@
 	-fx-font-weight: bold;
 	-fx-text-fill: limegreen;
 	-fx-stroke: black;
+	-fx-stroke-width: 1;
+}
+
+#stockDetailText{
+	-fx-font-family: fantasy;
+	-fx-font-size: 16pt;
+	-fx-stroke: white;
+	-fx-text-fill: white;
+	-fx-stroke-width: 1;
+}
+
+#inboxMessageText{
+	-fx-font-family: fantasy;
+	-fx-font-size: 16pt;
+	-fx-stroke: white;
+	-fx-text-fill: white;
 	-fx-stroke-width: 1;
 }
 	
