--- a/FrontEnd/UI_LoginStyle.css
+++ b/FrontEnd/UI_LoginStyle.css
@@ -22,3 +22,12 @@
 #border{
 		-fx-background-color: radial-gradient(radius 100%, lightgrey, lightblue); 
 }
+
+#loginProgressLabel{
+	-fx-text-fill: red;
+	-fx-font-size: 20pt;
+}
+
+#loginProgressBox{
+	-fx-background-color: rgba(0,0,0,0.60)
+}
